adicionando endpoint para avaliação de acordo com referencia do requisito do techchallenge
